# imas

./: .dprint.jsonc  .gitattributes  .gitignore  .lefthook.yaml  CHANGELOG.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py  typos.toml
.binder/: environment.yml
.github/workflows/: ci.yaml  deploy-pypi.yml  docs.yml  release.yml
.nblink/: environment.yml
cherab/: __init__.py
cherab/imas/ggd/: __init__.py  base_mesh.py  unstruct_2d_extend_mesh.py  unstruct_2d_mesh.py
cherab/imas/ids/bolometer/: __init__.py  load_channels.py  utility.py
cherab/imas/ids/common/: __init__.py  slice.py  species.py
cherab/imas/ids/common/ggd/: __init__.py  load_grid.py  load_unstruct_2d.py  load_unstruct_3d.py
cherab/imas/ids/core_profiles/: load_profiles.py
cherab/imas/ids/edge_profiles/: __init__.py  load_profiles.py
cherab/imas/ids/equilibrium/: __init__.py  load_equilibrium.py  load_field.py
cherab/imas/ids/wall/: load2d.py  load3d.py
cherab/imas/math/: __init__.pxd  __init__.py  tetrahedralize.pyx
cherab/imas/math/functions/: __init__.pxd  __init__.py  vector_functions.pyx
cherab/imas/math/interpolators/: __init__.pxd  __init__.py  struct_grid_2d_functions.pxd  struct_grid_2d_functions.pyx  struct_grid_3d_functions.pxd  struct_grid_3d_functions.pyx  unstruct_grid_2d_functions.pxd  unstruct_grid_2d_functions.pyx  unstruct_grid_3d_functions.pxd  unstruct_grid_3d_functions.pyx
cherab/imas/observers/: __init__.py  bolometer.py
cherab/imas/plasma/: blend.py  core.py  edge.py  equilibrium.py  utility.py
cherab/imas/wall/: __init__.py  wall.py
demos/ITER/: bolometer_lines_of_sight.py  camera_geometry_matrix_gif.py  camera_geometry_matrix_gif_job.txt  core_plasma_plot_profiles.py  edge_plasma_mesh_and_values.py  edge_plasma_plot_profiles.py  full_plasma_plot_profiles.py
docs/notebooks/misc/: fractional_ abundances.ipynb  fractional_abundances.ipynb
docs/notebooks/observer/: bolometer.ipynb
docs/notebooks/plasma/: edge_plasma.ipynb  emission.ipynb  equilibrium.ipynb  full_plasma.ipynb
docs/source/: api.md  conf.py  contributing.md  examples.md  index.md  intro.md
docs/source/_static/: custom.css
docs/source/_templates/: attribute.rst  class.rst  method.rst  module.rst
src/cherab/: __init__.pxd
src/cherab/imas/: __init__.py
src/cherab/imas/datasets/: __init__.py  _builtin.py  _fetchers.py  _patch.py  _progress.py  _registry.py  _utils.py
src/cherab/imas/ggd/: __init__.py  base_mesh.py  unstruct_2d_extend_mesh.py  unstruct_2d_mesh.py  unstruct_3d_mesh.py
src/cherab/imas/ids/: __init__.py
src/cherab/imas/ids/bolometer/: __init__.py  _camera.py  _los.py  load_camera.py  utility.py
src/cherab/imas/ids/common/: __init__.py  _model.py  slice.py  species.py
src/cherab/imas/ids/common/ggd/: __init__.py  load_grid.py  load_unstruct_2d.py  load_unstruct_3d.py
src/cherab/imas/ids/core_profiles/: __init__.py  load_profiles.py
src/cherab/imas/ids/edge_profiles/: __init__.py  load_profiles.py
src/cherab/imas/ids/equilibrium/: __init__.py  load_equilibrium.py  load_field.py
src/cherab/imas/ids/wall/: __init__.py  load2d.py  load3d.py
src/cherab/imas/math/: __init__.pxd  __init__.py  tetrahedralize.pyi  tetrahedralize.pyx
src/cherab/imas/math/functions/: __init__.py  vector_functions.pxd  vector_functions.pyi  vector_functions.pyx
src/cherab/imas/math/interpolators/: __init__.pxd  __init__.py  struct_grid_2d_functions.pxd  struct_grid_2d_functions.pyi  struct_grid_2d_functions.pyx  struct_grid_3d_functions.pyi  struct_grid_3d_functions.pyx  unstruct_grid_2d_functions.pxd  unstruct_grid_2d_functions.pyi  unstruct_grid_2d_functions.pyx  unstruct_grid_3d_functions.pxd  unstruct_grid_3d_functions.pyi  unstruct_grid_3d_functions.pyx
src/cherab/imas/observer/: __init__.py  bolometer.py
src/cherab/imas/plasma/: __init__.py  _model.py  blend.py  core.py  edge.py  equilibrium.py  utility.py
src/cherab/imas/wall/: __init__.py  wall.py
tests/: conftest.py
tests/datasets/: test_fetchers.py  test_utils.py
tests/observer/: conftest.py  test_bolometer.py
tests/plasma/: conftest.py  test_blend.py  test_core.py  test_edge.py  test_equilibrium.py
