[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-cython>=0.6.0rc0", "cherab==1.5.*"]
build-backend = "hatchling.build"

[project]
name = "cherab-imas"
description = "Cherab spectroscopy framework: IMAS submodule"
authors = [
  { name = "munechika-koyo", email = "munechika.koyo@gmail.com" },
  { name = "vsnever" },
  { name = "jacklovell" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "EUPL-1.1"
license-files = ["LICEN[CS]E.*"]
keywords = ["cherab", "IMAS", "imas", "tokamak", "fusion", "plasma"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cherab==1.5.*",
  "imas-python[netcdf]",
  "typing-extensions; python_version < '3.12'",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pooch", "rich"]

[project.urls]
Homepage = "https://github.com/cherab"
Documentation = "https://cherab.github.io/imas/"
Repository = "https://github.com/cherab/imas"
Issues = "https://github.com/cherab/imas/issues"

# ----------------------
# === Version config ===
# ----------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]

# ----------------------------
# === Build/Package config ===
# ----------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cherab"]
artifacts = ["*.so", "*.pyd", "*.dylib"]
exclude = ["*.pyx", "cherab/__init__.pxd"]

[tool.hatch.build.targets.wheel.shared-data]
"share/cherab/demos/imas" = "demos/*"

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
src = "cherab"
include_numpy = true
compile_py = false
parallel = true
compile_args = ["-O3"]
env = [
  { env = "LDFLAGS", arg = "-headerpad_max_install_names", platforms = [
    "darwin",
  ], arch = [
    "x86_64",
  ], merges = true },
]
define_macros = [["NPY_NO_DEPRECATED_API", "NPY_1_7_API_VERSION"]]

[tool.hatch.build.targets.wheel.hooks.cython.options.files]
targets = ["**/*.pyx"]

[tool.cibuildwheel]
skip = "pp* *_ppc64le *_i686 *_s390x *-musllinux* cp313-* cp314-* cp314t-*" # TODO: add cp313/314 when cherab supports it
build-frontend = "build[uv]"
test-extras = ["test"]
test-command = "pytest {project}/tests"

# -----------------------
# === Cov/Test config ===
# -----------------------
[tool.coverage.run]
source_pkgs = ["cherab.imas"]
branch = true
parallel = true

[tool.coverage.paths]
test = ["src/test", "*/test/src/test"]
tests = ["tests", "*/test/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov='cherab.imas' --cov-report term-missing --no-cov-on-fail"


# ------------------------------
# === Lint & Format settings ===
# ------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "B",   # flake8-bugbear
  "F",   # pyflakes
  "I",   # isort (import order)
  "N",   # pep8-naming
  "W",   # Warning
  "UP",  # pyupgrade
  "NPY", # numpy specific rules
  "D",   # pydocstyle
  "DOC", # pydoclint
]
preview = true
ignore = [
  # Recommended ignores by ruff when using formatter
  "E501", # line too long
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
  "D107", # missing docstring in __init__
]

[tool.ruff.lint.isort]
known-first-party = ["cherab"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
  "W292",
  "D",
  "DOC",
] # no newline at end of file and skip docstring checks
"tests/**" = ["D", "DOC"] # skip docstring checks in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.cython-lint]
max-line-length = 100

# ------------------------------
# === Type checking settings ===
# ------------------------------
[tool.mypy]
files = ["src", "tests"]
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["no-any-return"]
plugins = ["numpy.typing.mypy_plugin"]

[tool.basedpyright]
include = ["src", "tests"]
pythonPlatform = "All"
typeCheckingMode = "all"
reportMissingTypeStubs = true

# no raysect/cherab type stubs; pytest fixtures
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

# ruff handles this
reportUnusedParameter = false
